modify: hashTagService paging query logic